--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-<h3 id="hi-there-👋im-gloridust">Hi there 👋I&#39;m Gloridust</h3>
-<h>Sorry, I still can't forgive u, xxy.</h>
+<!DOCTYPE html>
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>xxy, i can't forget u. </title>
+    <meta name="keywords" content="Gloridust,love,xxy">
+    <meta name="description" content="xxy, i can't forget u." />
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+</head>
+
+<body>
+    <h3 id="hi-there-👋im-gloridust">Hi there 👋I&#39;m Gloridust</h3>
+    <h>Sorry, I still can't forgive u, xxy.</h>
+</body>
